# de-rpc

./: CMakeLists.txt  README.md  rpc.sln
example/: CMakeLists.txt
example/rpc_client_test/: main.cpp
example/rpc_middle/: CMakeLists.txt  main.cpp  rpc_server.vcxproj
example/rpc_server/: main.cpp
include/rpc/: common.h  connection.h  router.h  server.h
include/rpc_middle/: MiddleConnection.h  MiddleServer.h
rest/rpc_client/: Source.cpp
rpc/: ClassDiagram.cd  ReadMe.txt  client.cpp  client.h  connection.cpp  io_service_pool.cpp  router.cpp  router.h  rpc.vcxproj  rpc.vcxproj.filters  server.cpp  token_parser.cpp  token_parser.h  utility.hpp
rpc_client_test/: Source.cpp  rpc_client_test.vcxproj
rpc_middle/: ChatMsg.h  MiddleConnection.cpp  MiddleConnection.h  MiddleRouter.cpp  MiddleRouter.h  MiddleServer.cpp  Source.cpp  rpc_middle.vcxproj  rpc_middle.vcxproj.filters
rpc_server/: Source.cpp  rpc_server.vcxproj
rpc_server-del/: Source.cpp  rpc_server_del.vcxproj
rpc_server_test/: Source.cpp  rpc_test.vcxproj
src/rpc/: CMakeLists.txt  client.cpp  common.h  connection.cpp  io_service_pool.cpp  io_service_pool.h
src/rpc_middle/: CMakeLists.txt  ChatMsg.cpp  MiddleConnection.cpp  MiddleConnection.h  MiddleRouter.cpp  MiddleServer.cpp
